--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script type="text/javascript">
+        if (!Array.isArray(window.qbOptions)) {
+          window.qbOptions = []
+        }
+        window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"5doqer3K6VrR6ZL0/KoPqxmzGRJrg5eNl"});
+      </script>
+      <script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
+</body>
+</html>
