--- a/index.html
+++ b/index.html
@@ -7,24 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card-hover">
-    <div class="card-hover__content">
-      <h3 class="card-hover__title">
-        Make your <span>choice</span> right now!
-      </h3>
-      <p class="card-hover__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia quisquam doloremque nostrum laboriosam, blanditiis libero corporis nulla a aut?</p>
-      <a href="#" class="card-hover__link">
-        <span>Learn How</span>
-        <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3" />
-        </svg>        
-      </a>
-    </div>
-    <div class="card-hover__extra">
-      <h4>Learn <span>now</span> and get <span>40%</span> discount!</h4>
-    </div>
-    <img src="https://images.unsplash.com/photo-1586511925558-a4c6376fe65f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=60" alt="">
-  </div>
+    <section>
+	<div class="row">
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="card">
+				<div class="cover item-a">
+					<h1>Little<br>Bonsai</h1>
+					<span class="price">$79</span>
+					<div class="card-back">
+						<a href="#">Add to cart</a>
+						<a href="#">View detail</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="card">
+				<div class="cover item-b">
+					<h1>Tropical<br>Leaf</h1>
+					<span class="price">$35</span>
+					<div class="card-back">
+						<a href="#">Add to cart</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="card">
+				<div class="cover item-c">
+					<h1>Marijuana<br>Chill</h1>
+					<span class="price">$155</span>
+					<div class="card-back">
+						<a href="#">Add to cart</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
