--- a/index.html
+++ b/index.html
@@ -8,44 +8,42 @@
 
 </head>
 <body>
-<section>
-	<div class="row">
-		<div class="col-md-4 col-sm-6 col-xs-12">
-			<div class="card">
-				<div class="cover item-a">
-					<h1>Little<br>Bonsai</h1>
-					<span class="price">$79</span>
-					<div class="card-back">
-						<a href="#">Add to cart</a>
-						<a href="#">View detail</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4 col-sm-6 col-xs-12">
-			<div class="card">
-				<div class="cover item-b">
-					<h1>Tropical<br>Leaf</h1>
-					<span class="price">$35</span>
-					<div class="card-back">
-						<a href="#">Add to cart</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4 col-sm-6 col-xs-12">
-			<div class="card">
-				<div class="cover item-c">
-					<h1>Marijuana<br>Chill</h1>
-					<span class="price">$155</span>
-					<div class="card-back">
-						<a href="#">Add to cart</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<a href="#" class="card">
+  <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI0OTY1ODM&ixlib=rb-1.2.1&q=80" alt="balloon with an emoji face" class="card__img">
+  <span class="card__footer">
+    <span>Awesome speedy card</span>
+    <span>2 minutes!</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
+<a href="#" class="card">
+  <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI0OTY1ODM&ixlib=rb-1.2.1&q=80" alt="balloon with an emoji face" class="card__img">
+  <span class="card__footer">
+    <span>Awesome speedy card</span>
+    <span>2 minutes!</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
+<a href="#" class="card">
+  <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI0OTY1ODM&ixlib=rb-1.2.1&q=80" alt="balloon with an emoji face" class="card__img">
+  <span class="card__footer">
+    <span>Awesome speedy card</span>
+    <span>2 minutes!</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
 
 
 
