--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-<a href="#" class="card">
-  <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjI0OTY1ODM&ixlib=rb-1.2.1&q=80" alt="balloon with an emoji face" class="card__img">
+<a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
+  <img src="elegedett.png" alt="balloon with an emoji face" class="card__img">
   <span class="card__footer">
     <span>Awesome speedy card</span>
     <span>2 minutes!</span>
