--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
 <a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
-  <img src="elegedett.png" alt="balloon with an emoji face" class="card__img">
+  <img src="elegedett.png" class="card__img">
   <span class="card__footer">
-    <span>Awesome speedy card</span>
-    <span>2 minutes!</span>
+    <span>Elégedettségi kérdőív</span>
   </span>
   <span class="card__action">
     <svg viewBox="0 0 448 512" title="play">
