--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
+
+	
 <body>
+
+	
 <a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
   <img src="elegedett.png" class="card__img">
   <span class="card__footer">
@@ -20,6 +25,18 @@
   </span>
 </a>
 
+	
+<a href="https://drive.google.com/open?authuser=0&id=1h-3VBwEhL4F8OGL_sX2zJk2g0cITMzjAhcr8wkn03eM" class="card">
+  <img src="ertekelo.png" class="card__img">
+  <span class="card__footer">
+    <span>Értékelő táblázat</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
 
 
 
