--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 	
 <a href="https://yeti07hun.github.io/Chatbot_Page/" class="card">
-  <img src="ertekelo.png" class="card__img">
+  <img src="szines.png" class="card__img">
   <span class="card__footer">
     <span>Összegző oldal</span>
   </span>
