--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
 	
 <body>
+	
+<a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
+  <img src="canva.avif" class="card__img">
+  <span class="card__footer">
+    <span>Összegző oldal</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
 
 	
 <a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
