--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	
 <a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
-  <img src="canva.avif" class="card__img">
+  <img src="canva.png" class="card__img">
   <span class="card__footer">
     <span>Összegző oldal</span>
   </span>
