--- a/index.html
+++ b/index.html
@@ -5,12 +5,85 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Összegző</title>
   <link rel="stylesheet" href="./style.css">
+<style>
+        /* Modal háttér */
+        .modal {
+            display: none; /* Kezdetben rejtett */
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
+        }
 
+        /* Modal tartalom */
+        .modal-content {
+            background-color: #fff;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+        }
+
+        /* Bezáró gomb */
+        .close {
+            color: #aaa;
+            font-size: 28px;
+            font-weight: bold;
+            position: absolute;
+            top: 10px;
+            right: 25px;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Kép stílus */
+        .modal img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* Link stílus */
+        .modal a {
+            display: block;
+            margin-top: 20px;
+            font-size: 18px;
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .modal a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 
 
 	
 <body>
+	<button id="openModalBtn">Előugró ablak megnyitása</button>
+
+<!-- Modal -->
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <img id="modalImage" src="" alt="Kép itt jelenik meg">
+        <a id="modalLink" href="#" target="_blank">Klikk ide a linkhez</a>
+    </div>
+</div>
+
+
+
+	
 <a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
   <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
   <span class="card__footer">
@@ -82,7 +155,39 @@
   window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"5doqer3K6VrR6ZL0/NePdxmo3yGmj8K6Q"});
 </script>
 <script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
+<script>
+    // Modal
+    var modal = document.getElementById("myModal");
 
+    // Gomb, ami megnyitja a modalt
+    var btn = document.getElementById("openModalBtn");
+
+    // Bezáró gomb
+    var span = document.getElementsByClassName("close")[0];
+
+    // Link és kép beállítása
+    var imageSrc = "https://via.placeholder.com/600x300"; // Ide másold a kívánt kép URL-jét
+    var linkHref = "https://example.com"; // Link URL
+
+    // Gomb kattintásra megnyitja a modalt
+    btn.onclick = function() {
+        modal.style.display = "block";
+        document.getElementById("modalImage").src = imageSrc;
+        document.getElementById("modalLink").href = linkHref;
+    }
+
+    // Bezáró gomb kattintásra bezárja a modalt
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // Ha a felhasználó a háttérre kattint, akkor bezárja a modalt
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 	
 </body>
 </html>
