--- a/index.html
+++ b/index.html
@@ -82,12 +82,21 @@
 </div>
 
 
-
-	
 <a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
   <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
   <span class="card__footer">
-    <span>Összegző oldal</span>
+    <span>Canva munkák</span>
+  </span>
+  <span class="card__action">
+    <svg viewBox="0 0 448 512" title="play">
+      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+    </svg>
+  </span>
+</a>
+<a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
+  <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
+  <span class="card__footer">
+    <span>Canva munkák</span>
   </span>
   <span class="card__action">
     <svg viewBox="0 0 448 512" title="play">
