--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 </div>
 
 
-<a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
-  <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
+<a href="" class="card">
+  <img src="masodfok.png" class="card__img">
   <span class="card__footer">
     <span>Canva munkák</span>
   </span>
@@ -93,6 +93,9 @@
     </svg>
   </span>
 </a>
+
+
+	
 <a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
   <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
   <span class="card__footer">
