--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <a href="" class="card">
   <img src="masodfok.png" class="card__img">
   <span class="card__footer">
-    <span>Canva munkák</span>
+    <span>Másodfokú-egyenlet megoldó</span>
   </span>
   <span class="card__action">
     <svg viewBox="0 0 448 512" title="play">
