--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </div>
 
 
-<a href="" class="card">
+<a href="https://yeti07hun.github.io/masodfokuegyenlet/" class="card">
   <img src="masodfok.png" class="card__img">
   <span class="card__footer">
     <span>Másodfokú-egyenlet megoldó</span>
