--- a/index.html
+++ b/index.html
@@ -2,172 +2,196 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Összegző</title>
   <link rel="stylesheet" href="./style.css">
-<style>
-        /* Modal háttér */
-        .modal {
-            display: none; /* Kezdetben rejtett */
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
+  <style>
+    /* Modal háttér */
+    .modal {
+        display: none; /* Kezdetben rejtett */
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
 
-        /* Modal tartalom */
-        .modal-content {
-            background-color: #fff;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 600px;
-        }
+    /* Modal tartalom */
+    .modal-content {
+        background-color: #fff;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 600px;
+    }
 
-        /* Bezáró gomb */
-        .close {
-            color: #aaa;
-            font-size: 28px;
-            font-weight: bold;
-            position: absolute;
-            top: 10px;
-            right: 25px;
-        }
+    /* Bezáró gomb */
+    .close {
+        color: #aaa;
+        font-size: 28px;
+        font-weight: bold;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+    }
 
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
-        /* Kép stílus */
-        .modal img {
-            max-width: 100%;
-            height: auto;
-        }
+    /* Kép stílus */
+    .modal img {
+        max-width: 100%;
+        height: auto;
+    }
 
-        /* Link stílus */
-        .modal a {
-            display: block;
-            margin-top: 20px;
-            font-size: 18px;
-            color: #007bff;
-            text-decoration: none;
-        }
+    /* Link stílus */
+    .modal a {
+        display: block;
+        margin-top: 20px;
+        font-size: 18px;
+        color: #007bff;
+        text-decoration: none;
+    }
 
-        .modal a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    .modal a:hover {
+        text-decoration: underline;
+    }
+
+    /* Card stílus */
+    .card {
+        display: block;
+        margin-bottom: 20px;
+        text-decoration: none;
+        color: inherit;
+    }
+
+    .card__img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+    }
+
+    .card__footer {
+        display: block;
+        margin-top: 10px;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .card__action {
+        display: block;
+        margin-top: 10px;
+    }
+  </style>
 </head>
-
-
-	
 <body>
-	<button id="openModalBtn">Előugró ablak megnyitása</button>
-
-<!-- Modal -->
-<div id="myModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <img id="modalImage" src="" alt="Kép itt jelenik meg">
-        <a id="modalLink" href="#" target="_blank">Klikk ide a linkhez</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center my-4">
+        <button id="openModalBtn" class="btn btn-primary">Előugró ablak megnyitása</button>
+      </div>
     </div>
-</div>
 
+    <div class="row">
+      <div class="col-md-4 col-sm-6 mb-4">
+        <a href="https://yeti07hun.github.io/masodfokuegyenlet/" class="card">
+          <img src="masodfok.png" class="card__img">
+          <span class="card__footer">
+            <span>Másodfokú-egyenlet megoldó</span>
+          </span>
+          <span class="card__action">
+            <svg viewBox="0 0 448 512" title="play">
+              <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+            </svg>
+          </span>
+        </a>
+      </div>
 
-<a href="https://yeti07hun.github.io/masodfokuegyenlet/" class="card">
-  <img src="masodfok.png" class="card__img">
-  <span class="card__footer">
-    <span>Másodfokú-egyenlet megoldó</span>
-  </span>
-  <span class="card__action">
-    <svg viewBox="0 0 448 512" title="play">
-      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
-    </svg>
-  </span>
-</a>
+      <div class="col-md-4 col-sm-6 mb-4">
+        <a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
+          <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
+          <span class="card__footer">
+            <span>Canva munkák</span>
+          </span>
+          <span class="card__action">
+            <svg viewBox="0 0 448 512" title="play">
+              <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+            </svg>
+          </span>
+        </a>
+      </div>
 
+      <div class="col-md-4 col-sm-6 mb-4">
+        <a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
+          <img src="elegedett.png" class="card__img">
+          <span class="card__footer">
+            <span>Elégedettségi kérdőív</span>
+          </span>
+          <span class="card__action">
+            <svg viewBox="0 0 448 512" title="play">
+              <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+            </svg>
+          </span>
+        </a>
+      </div>
 
-	
-<a href="https://drive.google.com/drive/folders/1m4TBW1-tMJMmmWvCBLlMgTA6icIPOl_R?usp=drive_link" class="card">
-  <img src="https://cdn.vox-cdn.com/thumbor/zLQoUa2MeowDb_BXcajiOtfaqmo=/0x0:2040x1360/2000x1333/filters:focal(1020x680:1021x681)/cdn.vox-cdn.com/uploads/chorus_asset/file/25355957/STK263_CANVA_D.png" class="card__img">
-  <span class="card__footer">
-    <span>Canva munkák</span>
-  </span>
-  <span class="card__action">
-    <svg viewBox="0 0 448 512" title="play">
-      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
-    </svg>
-  </span>
-</a>
+      <div class="col-md-4 col-sm-6 mb-4">
+        <a href="https://drive.google.com/open?authuser=0&id=1h-3VBwEhL4F8OGL_sX2zJk2g0cITMzjAhcr8wkn03eM" class="card">
+          <img src="ertekelo.png" class="card__img">
+          <span class="card__footer">
+            <span>Értékelő táblázat</span>
+          </span>
+          <span class="card__action">
+            <svg viewBox="0 0 448 512" title="play">
+              <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+            </svg>
+          </span>
+        </a>
+      </div>
 
-	
-<a href="https://yttamas210.github.io/projekt-2/index2.html" class="card">
-  <img src="elegedett.png" class="card__img">
-  <span class="card__footer">
-    <span>Elégedettségi kérdőív</span>
-  </span>
-  <span class="card__action">
-    <svg viewBox="0 0 448 512" title="play">
-      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
-    </svg>
-  </span>
-</a>
+      <div class="col-md-4 col-sm-6 mb-4">
+        <a href="https://yeti07hun.github.io/Chatbot_Page/" class="card">
+          <img src="szines.png" class="card__img">
+          <span class="card__footer">
+            <span>Összegző oldal</span>
+          </span>
+          <span class="card__action">
+            <svg viewBox="0 0 448 512" title="play">
+              <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
+            </svg>
+          </span>
+        </a>
+      </div>
+    </div>
+  </div>
 
-	
-<a href="https://drive.google.com/open?authuser=0&id=1h-3VBwEhL4F8OGL_sX2zJk2g0cITMzjAhcr8wkn03eM" class="card">
-  <img src="ertekelo.png" class="card__img">
-  <span class="card__footer">
-    <span>Értékelő táblázat</span>
-  </span>
-  <span class="card__action">
-    <svg viewBox="0 0 448 512" title="play">
-      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
-    </svg>
-  </span>
-</a>
+  <!-- Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img id="modalImage" src="" alt="Kép itt jelenik meg">
+      <a id="modalLink" href="#" target="_blank">Klikk ide a linkhez</a>
+    </div>
+  </div>
 
-	
-<a href="https://yeti07hun.github.io/Chatbot_Page/" class="card">
-  <img src="szines.png" class="card__img">
-  <span class="card__footer">
-    <span>Összegző oldal</span>
-  </span>
-  <span class="card__action">
-    <svg viewBox="0 0 448 512" title="play">
-      <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z" />
-    </svg>
-  </span>
-</a>
-
-
-
-
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-	
-	
-	
-	
-<script type="text/javascript">
-  if (!Array.isArray(window.qbOptions)) {
-    window.qbOptions = []
-  }
-  window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"5doqer3K6VrR6ZL0/NePdxmo3yGmj8K6Q"});
-</script>
-<script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
-<script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    if (!Array.isArray(window.qbOptions)) {
+      window.qbOptions = []
+    }
+    window.qbOptions.push({"baseUrl":"https://botsrv2.com","use":"5doqer3K6VrR6ZL0/NePdxmo3yGmj8K6Q"});
+  </script>
+  <script type="text/javascript" src="https://static.botsrv2.com/website/js/widget2.js" crossorigin="anonymous" defer data-no-minify="1" data-cfasync="false"></script>
+  <script>
     // Modal
     var modal = document.getElementById("myModal");
 
@@ -199,7 +223,6 @@
             modal.style.display = "none";
         }
     }
-</script>
-	
+  </script>
 </body>
 </html>
